# StargazeMultiSnapshot

./: .gitignore  Building.md  Cargo.toml  README.md
.cargo/: config
Tester/: package-lock.json  package.json  querytest.js  snapshotcollection.js
src/: contract.rs  error.rs  msg.rs
