[package]
name = "stargaze-multisnap"
version = "0.1.0"
authors = ["Deploydon", "HankBreck"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

optimize-arm64 = """docker run --rm -v "$(pwd)":/code \
    --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
    --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
    cosmwasm/rust-optimizer-arm64:0.12.8 \
    && mv ./artifacts/stargaze_multisnap-aarch64.wasm ./artifacts/stargaze_multisnap.wasm
"""
store = """starsd tx wasm store artifacts/stargaze_multisnap.wasm --from dev --gas-prices 0.025ustars --gas-adjustment 1.7 --gas auto --output json -b block -y"""
prep-client = """cd ./Tester/ && npm install"""
client-all = """node ./Tester/querytest.js"""
client-range = """node ./Tester/snapshotcollection.js"""


[dependencies]
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cw721-base = { version = "0.13.4", features = ["library"] }
sg721-base = { version = "0.21.1", features = ["library"] }
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
cw721 = "0.15"


[dev-dependencies]
cw-multi-test = "0.15.1"
